Definition resource/pilot dynamism/heterogeneity and correlation resource/pilot/ttc

--- a/OSG/analysis/osg_characterization.ipynb
+++ b/OSG/analysis/osg_characterization.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# <center>Characterization of pilot-based distributed executions on the<br>XSEDE OSG Virtual Cluster</center>\n",
     "\n",
@@ -54,7 +56,41 @@
     "| 08         |                        1024,2048 | 1024    | XSEDE OSG Virtual Cluster |\n",
     "| 09         |                             2048 | 2048    | XSEDE OSG Virtual Cluster |\n",
     "\n",
-    "## Results and Discussion"
+    "## Results and Discussion\n",
+    "\n",
+    "### Resource Dynamism\n",
+    "* How many resources are used on average for each experiment' BoT?\n",
+    "* Does the number of resources vary among experiments' BoT?\n",
+    "* Does the number of resources vary during the execution of each experiment's BoT?\n",
+    "\n",
+    "### Pilot Dynamism\n",
+    "* How many active pilots are used on averate for each experiment's BoT?\n",
+    "* Does the number of active pilots vary among experiments' BoT?\n",
+    "* Does the number of active pilots vary during the execution of each experiment's BoT?\n",
+    "\n",
+    "### Correlation Between Resource and Pilot Dynamism\n",
+    "* Does the number of resources used for each experiment's BoT execution correlate to the number of pilots requested?\n",
+    "* Does the number of resources used for each experiment's BoT execution correlate to the number of active pilots?\n",
+    "* Does the variation of the number of pilots correlate to variation of the number of resources during runtime?\n",
+    "\n",
+    "### Correlation Between Resource Dynamism and TTC\n",
+    "* Does the number of resources used to execute experiments' BoT correlate to variations in the BoT TTC?\n",
+    "* Does the variation of the number of resources during the execution of the experiments' BoT correlate tp the BoT TTC?\n",
+    "\n",
+    "### Correlation Between Pilot Dynamism and TTC\n",
+    "* Does the number of active pilots used to execute experiments' BoT correlate to variations in the BoT TTC?\n",
+    "* Does the variation of the number of active pilots during the execution of the experiments' BoT correlate tp the BoT TTC?\n",
+    "* DOes the ration between active pilots and single hosts correlate to the BoT TTC?\n",
+    "\n",
+    "### Resource Heterogeneity\n",
+    "* Is there a direct/indirect measurement of CPU heterogeneity across resources used to execture experiments' BoT?\n",
+    "* Is there a direct/indirect measurement of geographical heterogeneity across resources used to execute experiments' BoT?\n",
+    "* Is there a direct/indirect measurement of software stack heterogeneity across resources used to execute experiments' BoT?\n",
+    "\n",
+    "### Correlation Between Resource Heterogeneity and TTC\n",
+    "* Does the degree of CPU heterogeneity across resources used to execture experiments' BoT correlate to the BoT TTC?\n",
+    "* Does the degree of geographical heterogeneity across resources used to execture experiments' BoT correlate to the BoT TTC?\n",
+    "* Does the degree of software stack heterogeneity across resources used to execture experiments' BoT correlate to the BoT TTC?\n"
    ]
   },
   {
