Ongoing experiments design

--- a/OSG/analysis/osg_characterization.ipynb
+++ b/OSG/analysis/osg_characterization.ipynb
@@ -32,6 +32,14 @@
     "\n",
     "## Related Work\n",
     "\n",
+    "* What is campus bridging and what is XSEDE doing about it?\n",
+    "* Xsede campus bridging use cases\n",
+    "* Comparing futuregrid, amazon ec2, and open science grid for scientific workflows\n",
+    "* Job and data clustering for aggregate use of multiple production cyberinfrastructures\n",
+    "* A Comparison of a Campus Cluster and Open Science Grid Platforms for Protein-Guided Assembly using Pegasus Workflow Management System\n",
+    "* Leveraging the national cyberinfrastructure for biomedical research\n",
+    "* Distributed application runtime environment (DARE): a standards-based middleware framework for science-gateways\n",
+    "\n",
     "## Tools and Methods\n",
     "\n",
     "* AIMES integrated middleware\n",
@@ -42,7 +50,13 @@
     "\n",
     "## Experiments Design\n",
     "\n",
-    "We designed nine experiments, executing between 8 and 2048 emulations of an AMBER MD simulation. We emulate the simulation used in a real-life use case\n",
+    "XVOC resources are dynamic and heterogeneous by design: resource availability is not guaranteed by a service level agreement and their capabilities are not assumed to be homogeneous. Resources are not specifically architected to serve XVOC use cases and are not exclusively dedicated to XVOC. They are utilized by a selected group of users and are opportunistically shared with XSEDE users via XVOC only when underutilized. The same applies to resource capabilities: resources have diverse CPU architectures, networking bandwith and latency, and local or networked stroage facilities. It is important to note that this design choice is not mandated by the utilized technologies: The Condor framework does not manadate opportunistic computing, it enables it when it is chosen as the resource provisinioning model.\n",
+    "\n",
+    "The opportunistic provision of XVOC resources and their assumed heterogeneity introduces uncertanty in distributed execution of workloads. The concurrency of the distributed execution and the duration of each task are unpredictable due to undefined resource availability and heterogeneity. Policies constrain this uncertainty by limiting the type of tasks that should be submitted to XVOC and keeping a total average of 1000 cores available at any point in time. Consistently, XSEDE users are invited to run single-threded executables that use less than 2GB of memory and run for up to 12 hours. These policies contribute to constrain uncertainty but do not characterize it: the concurrency of distributed executions of tasks consistent with the indicated parameters and the distribution of the duration of these tasks remain indeterminated. \n",
+    "\n",
+    "We designed nine experiments to characterize the dynamism and heterogeneity of XVOC when executing set of tasks within the boundaries set by XVOC policies. \n",
+    "\n",
+    ", executing between 8 and 2048 emulations of an AMBER MD simulation. We emulate the simulation used in a real-life use case\n",
     "\n",
     "| Experiment | <center>#CU</center>             | #Pilots |\n",
     "|:----------:|---------------------------------:|---------|\n",
@@ -58,9 +72,6 @@
     "\n",
     "## Results and Discussion\n",
     "\n",
-    "XVOC resources are dynamic and heterogeneous by design: resource availability is not guaranteed by a service level agreement and their capabilities are not guaranteed to be homogeneous. Resources are not specifically architected to serve XVOC use cases and are not exclusively dedicated to XVOC. They are utilized by a selected group of users and are opportunistically shared with XSEDE users via XVOC only when underutilized. The same applies to resource capabilities: resources have diverse CPU architectures, networking bandwith and latency, and local or networked stroage facilities. It is important to note that this design choice is not mandated by the utilized technologies: The Condor framework does not manadate opportunistic computing, it enables it when it is chosen as the resource provisinioning model.\n",
-    "\n",
-    "The opportunistic provision of XVOC resources and their potential heterogeneity introduces indetermination when considering distributed execution of workloads. Undefined resource availability makes impossible to determine in advance the degree of concurrency of the distributed execution while resource heterogeneity make impossible to know how long each task will take to complete. This indetermination is partially addressed by policy constrainig the requirements of the executables that should be submitted to XVOC. XSEDE users are invited to run singl-threded executables that use less than 2GB of memory and run for not more than 12 hours. \\mtnote{Explain how this does not address the problem of distribution of concurrent executions.}\n",
     "\n",
     "### Resource Dynamism\n",
     "* How many resources are used on average for each experiment' BoT?\n",
