Itration tools and methods, synapse analysis

--- a/OSG/analysis/osg_characterization.ipynb
+++ b/OSG/analysis/osg_characterization.ipynb
@@ -42,15 +42,19 @@
     "\n",
     "## Tools and Methods\n",
     "\n",
-    "The characterization of XOVC dynamics and heterogeneities depend upon the development of tailored tools and experimental methodologies. We developed the AIMES Middleware as a set of modules that enable the distributed execution of scientific workloads on diverse computing infrastructures. These modules are: Skeleton to enable a concise description of a workload; Synapse to profile and emulate the execution of scientific applications; Emanager to derive and enact distributed execution strategies; RADICAL-Pilot to describe tasks and pilots and to manage the execution of the former on the latter; and RADICAL-SAGA to enable the submission of pilots to diverse types of resource, e.g., clusters, grids, or clouds. Each module has a well-defined set of capabilities; can be used independently from the AIMES middleware; does not impose a specific language to specify a workload; and requires no installation of dedicated software on the resources on which to distribute the execution of a workload. The AIMES middleware can aggregate all or some of these modules depending on the use case and the type of distributed execution that needs to be performed.\n",
+    "The characterization of the dynamics and heterogeneities of XOVC depends on tailored tools and experimental methodologies. We developed the AIMES Middleware as a set of modules that enable the distributed execution of scientific workloads on diverse computing infrastructures. These modules are: Skeleton to succintely describe scientific applications; Synapse to profile and emulate the execution of those applications; Emanager to derive and enact strategies for the distributed execution of applications' workload; RADICAL-Pilot to describe workload tasks and pilots and to manage the execution of the former on the latter; and RADICAL-SAGA to enable the submission of pilots to diverse types of resource, e.g., clusters, grids, or clouds. Each module has a well-defined set of capabilities; can be used independently from the AIMES middleware; does not impose a specific language to specify application workloads; and requires no installation of dedicated software on the resources on which workloads are executed. The AIMES middleware can aggregate all or some of these modules, depending on the use case and the type of execution that needs to be performed.\n",
     "\n",
-    "In this paper we integrated all modules listed above to emulate the scientific application of our use case and distribute its execution on multiple XOVC resoruces. We executed workloads at different scales, both in terms of  number of workload's tasks and number of FLOPS requires by each task. The AIMES middleware enabled the timestamping of each relevant state transition of both the workload and the resources on which the workload is distributed and executed. These timestamps were used to qualify and measure the dynamics of XOVC by calculating when and for how long each resource was available or unavailable, and each task was waiting to be executed or being executed. Developing these tools and methodology posed several challenges: timestamps need to be concurrently recorded as workloads' tasks can be executed with a varying degree of concurrency on diverse hosts; timestamps need to be synchronized to account for the time variations across indepdendent hosts; state transitions need to be explicitly defined and guaranteed to be ordered on a sequence over time; and information about properties of both tasks and resources needs to be collected so to enable the analysis of task binding to hosts, hosts' capabilities, and, possibly, hosts' name and location.\n",
+    "In this paper, we integrated all modules of the AIMES middleware to emulate the workload of our use case at different scales. <!-- We emulated workload with different amount of tasks and with tasks requiring different amount of FLOPS. --> The AIMES middleware enabled the timestamping of each state transition of both the workload and the resources on which the workload was distributed and executed. These timestamps were used to qualify and measure the dynamics of XOVC by calculating when and for how long each resource was available or unavailable, and when and for how long each task was waiting to be executed or being executed. \n",
     "\n",
-    "The characterization of XOVC heterogeneity required also measuring differences of performance across resources. In this paper, we focus on CPU performances leaving the characterization of data and networking performance to future dedicated studies. CPU performance can be measured in multiple ways~\\cite{} but scientific workloads, especially those using heterogeneous tasks, most often are dominated by floating-point calculations~\\cite{}. Accourdingly, we measured CPU performance in terms of floating-point operations per second (FLOPS). We cannot directly access and measure the CPU FLOPS of each resource so we developed a tool to define a fixed amount of FLOPS, emulate the pattern of FLOPS utilization of the scientific application of our use case, and measure the time taken by each resource to perform the indicated amount of FLOPS. We considered this timespan a function of the CPU capabilities of the resources, and comparison among resources' timespans an indirect measure of CPU performance heterogeneity.\n",
+    "Developing these tools and methodology posed several challenges: timestamps need to be concurrently recorded as tasks can be executed with a varying degree of concurrency and on diverse resources; timestamps need to be synchronized to account for the time variations across indepdendent resources; state transitions need to be explicitly defined and guaranteed to be ordered on a sequence over time to enable measuring of the time components of the overall execution time; and information about properties of both tasks and resources needs to be collected so to enable the analysis of task binding to hosts, hosts' capabilities, and, possibly, hosts' name and location.\n",
+    "\n",
+    "The characterization of the heterogeneity of XOVC required measuring differences in performance across resources. We used the Synapse emulator to differentiate between CPU and filesystem performances. CPU performance can be measured in multiple ways~\\cite{} but the scientific workload of our use case is dominated by floating-point calculations~\\cite{}. Accourdingly, we measured CPU performance in terms of floating-point operations per second (FLOPS). We cannot directly access and measure the CPU FLOPS of each resource so we developed a tool to: (a) define a fixed amount of FLOPS; (b) emulate the pattern of FLOPS utilization of the scientific application of our use case;  and (c) measure the time taken by each resource to perform the indicated amount of FLOPS. We considered this timespan a function of the CPU capabilities of the resources, and comparison among resources' timespans an indirect measure of CPU performance heterogeneity.\n",
+    "\n",
+    "\\mtnote{Description of filesystem performance measurements}\n",
     "\n",
     "### Synapse\n",
     "\n",
-    "We use Synapse to profile and then emulate a specific instance of the AMBER application, a software package that simulates force fields for the dynamics of biomolecules. We correlate the time taken to compute a certain amount of FLOPS and the speed of the processor on which this computation is performed. Nonetheless, as we are not able to perform the emulation in protected mode and directly on the processor, a certain amount of architectural and software overhead is to be expected. Further, any concurrent system load influences both executed and emulated simulation performance. For this reason, we need to consider both the consistency and the accuracy of these timings.\n",
+    "We use Synapse to profile and then emulate a specific instance of the AMBER application, a software package that simulates force fields for the dynamics of biomolecules. We correlate the time taken to compute a certain amount of FLOPS to the speed of the processor on which this computation is performed. We are not able to perform emulation in protected mode and directly on the processor, therefore a certain amount of architectural and software overhead is to be expected. Further, any concurrent system load influences both executed and emulated simulation performance. For this reason, we need to consider both the consistency and the accuracy of the timings we collect with Synapse.\n",
     "\n",
     "We consider the profile of an execution of an application to be accurate when the profiling measures the effective number of flops performed by that application. The profile is consistent when multiple instances of profiling returns the same amount of flops for the same execution. Analogously, we consider an emulation of the profiled execution to be accurate when the time taken by the application to compute that number of flops on a given machine is the same time as taken by our emulator on that same machine. An emulation is consistent when multiple runs of the same emulation on the same machine require the same amount of time.\n",
     "\n",
@@ -585,7 +589,7 @@
     "plt.axvline(emulation['Emulated TTC'].dropna().mean(), color='purple', linestyle='dashed', linewidth=1)\n",
     "\n",
     "ax.set_xlabel('$TTC$ (s)')\n",
-    "ax.legend(labels=['Simulations Total Execution Time (STTC)', 'Mean STTC',\n",
+    "ax.legend(labels=['Total Execution Time (TTC)', 'Mean TTC',\n",
     "                  'Emulated Total Execution Time (ETTC)', 'Mean ETTC',\n",
     "                  'Multiple Emulated Total Execution Time (METTC)', 'Mean METTC'],\n",
     "          loc='upper center')\n",
@@ -662,19 +666,29 @@
     "fig, ax = fig_setup()\n",
     "title='AMBER add-use-case-name Simulation\\nComparison Density of Simulation Total Execution Time (STTC) and Emulated Total Execution Time (ETTC)'#\\nNote: Tail truncated at 2000s.'\n",
     "\n",
+    "# TTC\n",
     "display(sps.normaltest(emulation_mean['Emulated TTC'].dropna().tolist()))\n",
     "baseline[['TTC']].dropna().reset_index(drop=True).plot.density(ax=ax, color='black', title=title)\n",
     "plt.axvline(baseline['TTC'].dropna().mean(), color='black', linestyle='dashed', linewidth=1)\n",
+    "\n",
+    "# Emulated FLOPS TTC\n",
     "emulation_mean[['Emulated TTC']].dropna().reset_index(drop=True).plot.density(ax=ax, color='orange', title=title)\n",
     "plt.axvline(emulation_mean['Emulated TTC'].dropna().mean(), color='orange', linestyle='dashed', linewidth=1)\n",
+    "\n",
+    "# Emulated FLOPS TTC for every profile.\n",
     "emulation[['Emulated TTC']].dropna().reset_index(drop=True).plot.density(ax=ax, color='purple', title=title)\n",
     "plt.axvline(emulation['Emulated TTC'].dropna().mean(), color='purple', linestyle='dashed', linewidth=1)\n",
+    "\n",
+    "# Emulated FLOPS+I/O TTC\n",
     "emulation_prof[['Emulated TTC']].dropna().reset_index(drop=True).plot.density(ax=ax, color='gray', title=title)\n",
     "plt.axvline(emulation_prof['Emulated TTC'].dropna().mean(), color='gray', linestyle='dashed', linewidth=1)\n",
     "\n",
     "ax.set_xlabel('$TTC$ (s)')\n",
-    "ax.legend(labels=['Simulations Total Execution Time (STTC)', 'Mean STTC',\n",
-    "                  'Emulated Profile Total Execution Time (EPTTC)', 'Mean EPTTC'])#,\n",
+    "ax.legend(labels=['Total Execution Time (TTC)', 'Mean TTC',\n",
+    "                  'Emulated FLOPS Total Execution Time (ETTC FLOPS)', 'Mean ETTC FLOPS',\n",
+    "                  'FLOPS Emulated Total Execution Time (METTC FLOPS) for multiple profiles', 'Mean METTC FLOPS']\n",
+    "                  'Emulated FLOPS and I/O Total Execution Time (EFIOPTTC)', 'Mean EFIOPTTC',\n",
+    "                  'Emulated Total Execution Time (ETTC)', 'Mean ETTC',\n",
     "          #loc='upper center')\n",
     "\n",
     "# plt.savefig('figures/osg_tx_all_frequency.pdf', dpi=600, bbox_inches='tight')"
@@ -684,7 +698,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Emulation Accuracy and Consistency Across Resources"
+    "#### Emulation Accuracy and Consistency Across Resources\n",
+    "\n",
+    "TBD"
    ]
   },
   {
@@ -769,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -789,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -849,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -872,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -900,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -975,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -4454,6 +4470,9 @@
    "metadata": {},
    "source": [
     "## Conclusions\n",
+    "\n",
+    "XOVC and OSG more in general have been introducing capabilities and tools to support the execution of both multithreaded and OpenMPI tasks up to 8 cores~\\cite{}. Further, support for workload requiring GPUs, large dataset or large amount of memory is also beeing developed and deployed~\\cite{}. These capabilities blur the traditional and by now obselete distinction between high performance computing (HPC) and high throughput computing (HTC), reinforcing the case for distributing workload executions across the diverse types of resources offered by XSEDE to its users. The work presented in this paper offer a methodological platform for the characterization of these new capabilities, studies that we plan to publish in dedicated future papers.  \n",
+    "\n",
     "## Acknoledgments\n",
     "## References"
    ]
