--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Median task execution time (TxTx) per host across all runs"
+    "### Median task execution time ($T_x$) per host across all runs"
    ]
   },
   {
