Initial set of definitions

--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -236,6 +236,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Definitions\n",
+    "\n",
+    "* Homogeneity (of at least two entities): Given two entities with at least one property, the two entities are said to be homogeneous when their property has the same values. \n",
+    "* Heterogeneity (of at least two entities): Given two entities with at least one property,  the two entities are said to be homogeneous when their property has different values. \n",
+    "* Dynamism (of at least a property of an entity): Given an entity with at least one property, the dynamism of the entity's property is defined as the variation of that property's value over time. \n",
+    "* Task (in this paper): a unit of computation with a well-defined number of computing operations. \n",
+    "* Workload: a set of tasks that can be executed concurrently.\n",
+    "* Pilot: a resource placeholder enabling multi-stage scheduling of tasks.\n",
+    "* Resource: (in this paper) a set of resources that can be abstracted by one or more pilots.\n",
+    "* Host: a physical instance of a resource.\n",
+    "\n",
+    "\n",
+    "# Measures of Heterogeneity and Dynamism\n",
+    "\n",
+    "* XSEDE OSG Virtual Cluster ($XOVC$):Resource\n",
+    "* Total Time to Completion ($TTC$):Workload\n",
+    "* Total Queuing Time ($TTQ$):Workload\n",
+    "* Total Pilot Running Time ($TTR$):Workload\n",
+    "* Execution Time ($T_x$):Task\n",
+    "* Execution Time ($T_x$):Task\n",
+    "* Queuing Time ($T_q$):Pilot\n",
+    "* Running Time ($T_r$):Pilot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dynamism"
    ]
   },
