Definition; measures of heterogeneity and dynamism; possible plots and correlations to explore

--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -2,18 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mturilli/Virtualenvs/RADICAL-ANALYTICS/lib/python2.7/site-packages/radical/utils/atfork/stdlib_fixer.py:58: UserWarning: logging module already imported before fixup.\n",
-      "  warnings.warn('logging module already imported before fixup.')\n"
-     ]
-    }
-   ],
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -43,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -238,26 +231,112 @@
    "source": [
     "# Definitions\n",
     "\n",
-    "* Homogeneity (of at least two entities): Given two entities with at least one property, the two entities are said to be homogeneous when their property has the same values. \n",
-    "* Heterogeneity (of at least two entities): Given two entities with at least one property,  the two entities are said to be homogeneous when their property has different values. \n",
-    "* Dynamism (of at least a property of an entity): Given an entity with at least one property, the dynamism of the entity's property is defined as the variation of that property's value over time. \n",
-    "* Task (in this paper): a unit of computation with a well-defined number of computing operations. \n",
-    "* Workload: a set of tasks that can be executed concurrently.\n",
-    "* Pilot: a resource placeholder enabling multi-stage scheduling of tasks.\n",
-    "* Resource: (in this paper) a set of resources that can be abstracted by one or more pilots.\n",
-    "* Host: a physical instance of a resource.\n",
+    "* Characteristics:\n",
+    "  * **Homogeneity** (of at least two instances of an entity): Given two instances of an entity with at least one property, the two instances are said to be homogeneous when their property has the same values. \n",
+    "  * **Heterogeneity** (of at least two instances of an entity): Given two entities with at least one property,  the two entities are said to be homogeneous when their property has different values. \n",
+    "  * **Dynamism** (of at least a property of an entity's instance): Given an entity with at least one property, the dynamism of the entity's property is defined as the variation of that property's value over time. \n",
+    "* Entities:\n",
+    "  * **Task** (in this paper): a unit of computation with a well-defined number of computing operations. \n",
+    "  * **Workload**: a set of tasks that can be executed concurrently.\n",
+    "* Resources:\n",
+    "  * **Pilot**: a resource placeholder enabling multi-stage scheduling of tasks.\n",
+    "  * **Hosts**: a provider of a resources.\n",
     "\n",
+    "# Entities' instances of this paper\n",
+    "\n",
+    "* **Task**: [Synapse simulation of an AMBER task requiring 1715750072310 operations (as profiled with Synapsy)]\n",
+    "* **Workload**: [128 tasks, 256 tasks, 512 tasks, 1024 tasks, 2048 tasks]\n",
+    "* **Pilot**: [single core with no walltime; 128, 256, 512, 1024, 2048]\n",
+    "* **Host** = ['XSEDE OSG Virtual Cluster (XOVC)', \n",
+    "    'CRUSH.OSG', 'campuscluster.illinois.edu', 'local', 'mwt2.org',\n",
+    "    'bu.edu', 'fnal.gov', 'phys.uconn.edu', 'panther.net', 'iu.edu',\n",
+    "    'hep.wisc.edu', 'n0x.10.2.x.x', 'aglt2.org', 'nodo',\n",
+    "    'usatlas.bnl.gov', 'research.northwestern.edu', 'chtc.wisc.edu',\n",
+    "    'its.osg', 'unl.edu', 'cl.iit.edu', 'rcac.purdue.edu',\n",
+    "    'icecube.wisc.edu', 'crane.hcc.unl.edu', 'tusker.hcc.unl.edu',\n",
+    "    'ucsd.edu', 'colorado.edu', 'palmetto.clemson.edu',\n",
+    "    'sandhills.hcc.unl.edu', 'cmsaf.mit.edu', 'cms.ucdavis.edu',\n",
+    "    'grid.uchicago.edu', 'compute', 'red.hcc.unl.edu']\n",
     "\n",
     "# Measures of Heterogeneity and Dynamism\n",
     "\n",
-    "* XSEDE OSG Virtual Cluster ($XOVC$):Resource\n",
-    "* Total Time to Completion ($TTC$):Workload\n",
-    "* Total Queuing Time ($TTQ$):Workload\n",
-    "* Total Pilot Running Time ($TTR$):Workload\n",
-    "* Execution Time ($T_x$):Task\n",
-    "* Execution Time ($T_x$):Task\n",
-    "* Queuing Time ($T_q$):Pilot\n",
-    "* Running Time ($T_r$):Pilot"
+    "* Total Time to Completion ($TTC$): Workload\n",
+    "* Total Queuing Time ($TTQ$): Workload\n",
+    "* Total Pilot Running Time ($TTR$): Workload\n",
+    "* Execution Time ($T_x$): Task\n",
+    "* Queuing Time ($T_q$): Pilot\n",
+    "* Running Time ($T_r$): Pilot\n",
+    "\n",
+    "# Measures of Dynamism\n",
+    "\n",
+    "* Number of concurrent Workloads ($C_w$): Workload\n",
+    "* Number of concurrent (used) Pilots ($C_p$): Workload\n",
+    "* Number of concurrent (used) Hosts ($C_h$): Workload\n",
+    "* Number of concurrent (executed) Tasks ($C_t$): Workload\n",
+    "\n",
+    "# (Possible) Diagrams of the Measures of Dynamism\n",
+    "\n",
+    "| ID  | Entity   | Resource | Measure   | Description |\n",
+    "|-----|----------|----------|-----------|-------------|\n",
+    "| 1   | Workload | EOVC     | $TTC$     | Multiple instances of the same workload are sequentially submitted to EOVC. The distribution of $TTC$ describes the dynamism of EOVC for the time to completion of that type of workload. |\n",
+    "| 2   | Workload | EOVC     | $TTQ$     | As 1 but for $TTQ$. |\n",
+    "| 3   | Workload | EOVC     | $TTX$     | As 1 but for $TTX$. |\n",
+    "| 4   | Pilot    | EOVC     | $T_q$     | Multiple instances of the same pilot are sequentially submitted to EOVC. The distribution of $T_q$ describes the dynamism of EVOC for the queuing of that type of pilot. |\n",
+    "| 5   | Pilot    | EOVC     | $T_r$     | Multiple instances of the same pilot are sequentially submitted to EOVC. The distribution of $T_r$ describes the dynamism of EVOC for running that type of pilot. |\n",
+    "| 6   | Workload | Host     | $TTC$     | Multiple instances of the same workload are sequentially executed on a host. The distribution of $TTC$ describes the dynamism of that host for the time to completion of that type of workload. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
+    "| 7   | Workload | Host     | $TTQ$     | As 6 but for $TTQ$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
+    "| 8   | Workload | Host     | $TTX$     | As 6 but for $TTX$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
+    "| 9   | Pilot    | Host     | $T_r$     | Multiple instances of the same pilot are sequentially run on the same host. The distribution of $T_r$ describes the dynamism of that host for running that type of pilot. |\n",
+    "| 10  | Task     | Host     | $T_x$     | Multiple instances of the same task are sequentially scheduled on the same pilot that is running on a host. The distribution of $T_x$ describes the dynamism of the host on which the pilot is running for the execution of that type of task. |\n",
+    "| 11  | Workload | EOVC     | $C_w$     | Multiple groups of instances of the same workload are sequentially submitted to EOVC. The distribution of $C_t$ describes the dynamism of EOVC for the number of concurrent workloads for that group of workload. (This is possible to measure but I am not sure we can with the current data.)  |\n",
+    "| 12  | Workload | EOVC     | $C_p$     | Multiple instances of the same workload are sequentially submitted to EOVC. The distribution of $C_p$ describes the dynamism of EOVC for the number of concurrent pilots for that type of workload.  |\n",
+    "| 13  | Workload | EOVC     | $C_h$     | Multiple instances of the same workload are sequentially submitted to EOVC. The distribution of $C_h$ describes the dynamism of EOVC for the number of concurrent hosts for that type of workload.  |\n",
+    "| 14  | Workload | EOVC     | $C_t$     | Multiple instances of the same workload are sequentially submitted to EOVC. The distribution of $C_p$ describes the dynamism of EOVC for the number of concurrent tasks for that type of workload.  |\n",
+    "\n",
+    "Notes:\n",
+    "* We do not have $T_q$ at host level, only the aggregate of all the pilots' $T_q$ into $TTQ$.\n",
+    "* Pilots are submitted to EOVC; run on a host.\n",
+    "* Tasks are scheduled on a pilot; executed on a host.\n",
+    "\n",
+    "# (Possible) Diagrams of the Measures of Heterogeneity\n",
+    "\n",
+    "| ID  | Entity   | Resource | Measure   | Description |\n",
+    "|-----|----------|----------|-----------|-------------|\n",
+    "| 1   | Workload | EOVC     | $TTC$     | Multiple instances of the same workload are concurrently submitted to EOVC. The median of their $TTC$ describes the heterogeneity of EVOC for the time to completion of that type of workload. (This is possible but I am not sure we have enough information for actually plotting it). |\n",
+    "| 2   | Workload | EOVC     | $TTQ$     | As 1 but for $TTQ$. (This is possible but I am not sure we have enough information for actually plotting it). |\n",
+    "| 3   | Workload | EOVC     | $TTX$     | As 1 but for $TTX$. (This is possible but I am not sure we have enough information for actually plotting it). |\n",
+    "| 4   | Pilot    | EOVC     | $T_q$     | Multiple instances of the same pilot are concurrently submitted to EOVC. The median of their $T_q$ describes the heterogeneity of EVOC for the queuing of that type of pilot. |\n",
+    "| 5   | Pilot    | EOVC     | $T_r$     | Multiple instances of the same pilot are concurrently submitted to EOVC. The median of their $T_q$ describes the heterogeneity of EVOC for running that type of pilot. |\n",
+    "| 6   | Workload | Host     | $TTC$     | Multiple instances of the same workload are concurrently executed on a host. The median of their $TTC$ describes the heterogeneity of that host for the time to completion of that type of workload. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
+    "| 7   | Workload | Host     | $TTQ$     | As 6 but for $TTQ$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
+    "| 8   | Workload | Host     | $TTX$     | As 6 but for $TTX$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
+    "| 9   | Pilot    | Host     | $T_r$     | Multiple instances of the same pilot are concurrently executed on a host. The median of their $T_r$ describes the heterogeneity of that host for running that type of pilot. |\n",
+    "| 10  | Task     | Host     | $T_x$     | Multiple instances of the same task are concurrently executed on a host. The median of their $T_x$ describes the heterogeneity of that host for executing that type of task. |\n",
+    "\n",
+    "\n",
+    "# (Possible) Correlations\n",
+    "\n",
+    "* Number of concurrently requested pilots; number of concurrent hosts in use: positively correlates.\n",
+    "* Number of concurrently requested pilots; number of concurrent active pilots: Unknown.\n",
+    "* Number of concurrently requested pilots; number of concurrent tasks in execution: Unknown.\n",
+    "\n",
+    "\n",
+    "* Number of concurrent Hosts in use; number of concurrent active pilots: Unknown.\n",
+    "* Number of concurrent Hosts in use; number of concurrent tasks in execution: Unknown.\n",
+    "\n",
+    "\n",
+    "* Number of concurrently requested pilots; workload $TTC$: unknown.\n",
+    "* Number of concurrently requested pilots; workload $TTQ$: unknown.\n",
+    "* Number of concurrently requested pilots; workload $TTR$: unknown.\n",
+    "* Number of concurrently requested pilots; pilot $T_r$: unknown.\n",
+    "* Number of concurrently requested pilots; task $T_x$: unknown.\n",
+    "\n",
+    "\n",
+    "* Ratio pilot/tasks; workload $TTC$: unknown.\n",
+    "* Ratio pilot/tasks; workload $TTQ$: unknown.\n",
+    "* Ratio pilot/tasks; workload $TTR$: unknown.\n",
+    "* Ratio pilot/tasks; pilot $T_r$: unknown.\n",
+    "* Ratio pilot/tasks; task $T_x$: unknown."
    ]
   },
   {
