--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "| ID  | Entity   | Resource | Measure   | Description |\n",
     "|-----|----------|----------|-----------|-------------|\n",
-    "| 1   | Workload | XOVC     | $TTC$     | Multiple instances of the same workload are sequentially submitted to XOVC. The distribution of $TTC$ describes the dynamism of XOVC for the time to completion of that type of workload. |\n",
+    "| 1   | Workload | XOVC     | $TTC$     | Given a degree of concurrency, multiple instances of the same workload are sequentially submitted to XOVC. The distribution of $TTC$ describes the dynamism of XOVC for that type of workload. |\n",
     "| 2   | Workload | XOVC     | $TTQ$     | As 1 but for $TTQ$. |\n",
     "| 3   | Workload | XOVC     | $TTX$     | As 1 but for $TTX$. |\n",
     "| 4   | Pilot    | XOVC     | $T_q$     | Multiple instances of the same pilot are sequentially submitted to XOVC. The distribution of $T_q$ describes the dynamism of EVOC for the queuing of that type of pilot. |\n",
