--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -1,19 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mturilli/Virtualenvs/RADICAL-ANALYTICS/lib/python2.7/site-packages/radical/utils/atfork/stdlib_fixer.py:58: UserWarning: logging module already imported before fixup.\n",
-      "  warnings.warn('logging module already imported before fixup.')\n"
-     ]
-    }
-   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -245,15 +234,17 @@
     "* Entities:\n",
     "  * **Task** (in this paper): a unit of computation with a well-defined number of computing operations. \n",
     "  * **Workload**: a set of tasks that can be executed concurrently.\n",
-    "* Resources:\n",
-    "  * **Pilot**: a resource placeholder enabling multi-stage scheduling of tasks.\n",
-    "  * **Hosts**: a provider of a resources.\n",
+    "  * **Pilot**: a resource placeholder enabling multi-stage scheduling of tasks, described (in this paper) by the tuple &lt;number of cores; duration; host> \n",
+    "  * **Hosts**: a provider of a resources, i.e., sets of consumables.\n",
+    "* **Run** (in this paper): a tuple &lt;Workload; number of pilots; host>\n",
+    "* **Experiment**: set of runs\n",
+    "\n",
     "\n",
     "# Entities' instances of this paper\n",
     "\n",
     "* **Task**: [Synapse simulation of an AMBER task requiring 1715750072310 operations (as profiled with Synapsy)]\n",
     "* **Workload**: [128 tasks, 256 tasks, 512 tasks, 1024 tasks, 2048 tasks]\n",
-    "* **Pilot**: [single core with no walltime; 8, 16, 32, 64, 128, 256, 512, 1024, 2048]\n",
+    "* **Pilot**: [single core with no walltime; gorups of 8, 16, 32, 64, 128, 256, 512, 1024, 2048]\n",
     "* **Host** = ['XSEDE OSG Virtual Cluster (XOVC)', \n",
     "    'CRUSH.OSG', 'campuscluster.illinois.edu', 'local', 'mwt2.org',\n",
     "    'bu.edu', 'fnal.gov', 'phys.uconn.edu', 'panther.net', 'iu.edu',\n",
@@ -264,15 +255,31 @@
     "    'ucsd.edu', 'colorado.edu', 'palmetto.clemson.edu',\n",
     "    'sandhills.hcc.unl.edu', 'cmsaf.mit.edu', 'cms.ucdavis.edu',\n",
     "    'grid.uchicago.edu', 'compute', 'red.hcc.unl.edu']\n",
+    "    \n",
+    "# Experiments of this paper\n",
+    "\n",
+    "| Experiment | <center>workload</center>                                                 | #Pilots |\n",
+    "|:----------:|--------------------------------------------------------------------------:|:--------|\n",
+    "| 1          | 8,16,32,64,128,256,512<span style=\"color:white\">..................</span> | 8       |\n",
+    "| 2          |   16,32,64,128,256,512,1024<span style=\"color:white\">.........</span>     | 16      |\n",
+    "| 3          |      32,64,128,256,512,1024,2048                                          | 32      |\n",
+    "| 4          |         64,128,256,512,1024,2048                                          | 64      |\n",
+    "| 5          |            128,256,512,1024,2048                                          | 128     |\n",
+    "| 6          |                256,512,1024,2048                                          | 256     |\n",
+    "| 7          |                    512,1024,2048                                          | 512     |\n",
+    "| 8          |                        1024,2048                                          | 1024    |\n",
+    "| 9          |                             2048                                          | 2048    |\n",
+    "\n",
+    "\n",
     "\n",
     "# Measures of Heterogeneity and Dynamism\n",
     "\n",
     "* Total Time to Completion ($TTC$): Workload\n",
     "* Total Queuing Time ($TTQ$): Workload\n",
     "* Total Pilot Running Time ($TTR$): Workload\n",
-    "* Execution Time ($T_x$): Task\n",
     "* Queuing Time ($T_q$): Pilot\n",
     "* Running Time ($T_r$): Pilot\n",
+    "* Execution Time ($T_x$): Task\n",
     "\n",
     "# Measures of Dynamism\n",
     "\n",
@@ -283,22 +290,32 @@
     "\n",
     "# (Possible) Diagrams of the Measures of Dynamism\n",
     "\n",
-    "| ID  | Entity   | Resource | Measure   | Description |\n",
-    "|-----|----------|----------|-----------|-------------|\n",
-    "| 1   | Workload | XOVC     | $TTC$     | Given a degree of concurrency, multiple instances of the same workload are sequentially submitted to XOVC. The distribution of $TTC$ describes the dynamism of XOVC for that type of workload. |\n",
-    "| 2   | Workload | XOVC     | $TTQ$     | As 1 but for $TTQ$. |\n",
-    "| 3   | Workload | XOVC     | $TTX$     | As 1 but for $TTX$. |\n",
-    "| 4   | Pilot    | XOVC     | $T_q$     | Multiple instances of the same pilot are sequentially submitted to XOVC. The distribution of $T_q$ describes the dynamism of EVOC for the queuing of that type of pilot. |\n",
-    "| 5   | Pilot    | XOVC     | $T_r$     | Multiple instances of the same pilot are sequentially submitted to XOVC. The distribution of $T_r$ describes the dynamism of EVOC for running that type of pilot. |\n",
-    "| 6   | Workload | Host     | $TTC$     | Multiple instances of the same workload are sequentially executed on a host. The distribution of $TTC$ describes the dynamism of that host for the time to completion of that type of workload. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
-    "| 7   | Workload | Host     | $TTQ$     | As 6 but for $TTQ$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
-    "| 8   | Workload | Host     | $TTX$     | As 6 but for $TTX$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
-    "| 9   | Pilot    | Host     | $T_r$     | Multiple instances of the same pilot are sequentially run on the same host. The distribution of $T_r$ describes the dynamism of that host for running that type of pilot. |\n",
-    "| 10  | Task     | Host     | $T_x$     | Multiple instances of the same task are sequentially scheduled on the same pilot that is running on a host. The distribution of $T_x$ describes the dynamism of the host on which the pilot is running for the execution of that type of task. |\n",
-    "| 11  | Workload | XOVC     | $C_w$     | Multiple groups of instances of the same workload are sequentially submitted to XOVC. The distribution of $C_t$ describes the dynamism of XOVC for the number of concurrent workloads for that group of workload. (This is possible to measure but I am not sure we can with the current data.)  |\n",
-    "| 12  | Workload | XOVC     | $C_p$     | Multiple instances of the same workload are sequentially submitted to XOVC. The distribution of $C_p$ describes the dynamism of XOVC for the number of concurrent pilots for that type of workload.  |\n",
-    "| 13  | Workload | XOVC     | $C_h$     | Multiple instances of the same workload are sequentially submitted to XOVC. The distribution of $C_h$ describes the dynamism of XOVC for the number of concurrent hosts for that type of workload.  |\n",
-    "| 14  | Workload | XOVC     | $C_t$     | Multiple instances of the same workload are sequentially submitted to XOVC. The distribution of $C_p$ describes the dynamism of XOVC for the number of concurrent tasks for that type of workload.  |\n",
+    "Template to define dynamism:\n",
+    "\n",
+    "{E,R,M} \n",
+    "\n",
+    "- E = Entity\n",
+    "- R = Resource\n",
+    "- M = Measure\n",
+    "\n",
+    "Dynamism of E on R as measured by M\n",
+    "\n",
+    "| ID  | Entity   | Resource | Measure   | Plot                                    |Description |\n",
+    "|-----|----------|----------|-----------|-----------------------------------------|------------|\n",
+    "| 1   | Workload | XOVC     | $TTC$     | Histogram: x = $TTC$ (s); y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the distribution of $TTC$. |\n",
+    "| 2   | Workload | XOVC     | $TTQ$     | Histogram: x = $TTQ$ (s); y = Frequency | As 1 but with $TTQ$. |\n",
+    "| 3   | Workload | XOVC     | $TTX$     | Histogram: x = $TTX$ (s); y = Frequency | As 1 but with $TTX$. |\n",
+    "| 4   | Pilot    | XOVC     | $T_q$     | Histogram: x = $T_q$ (s); y = Frequency | For every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are sequentially submitted to XOVC. The histogram describes the dynamism of that pilot on XOVC as measured by the distribution of $T_q$. (We are not sure what we are measuring: the time the pilot has been waiting on the broker (the broker does late binding of jobs to hosts) or the time the pilot has been waiting on a host (the broker does early binding of jobs to hosts). I think the former but not sure how to verify it.) |\n",
+    "| 5   | Pilot    | XOVC     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are sequentially submitted to XOVC. The histogram describes the dynamism of that pilot on XOVC as measured by the distribution of $T_r$. |\n",
+    "| 6   | Workload | Host     | $TTC$     | Histogram: x = $TTC$ (s); y = Frequency | For every experiment run, multiple instances of the same run are sequentially executed on a host. The histogram describes the dynamism of that run's workload on that host as measured by the distribution of $TTC$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed on the same host and the degree of concurrency (i.e., the number of pilots/cores) with which those tasks are executed on that host.) |\n",
+    "| 7   | Workload | Host     | $TTQ$     | Histogram: x = $TTQ$ (s); y = Frequency | As 6 but for $TTQ$. |\n",
+    "| 8   | Workload | Host     | $TTX$     | Histogram: x = $TTX$ (s); y = Frequency | As 6 but for $TTX$. |\n",
+    "| 9   | Pilot    | Host     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every type of pilot (&lt;1; unspecified; host>), multiple instances of the same pilot become sequentially active on the same host. The histogram describes the dynamism of that pilot on that host as measured by the distribution of $T_r$. |\n",
+    "| 10  | Task     | Host     | $T_x$     | Histogram: x = $T_x$ (s); y = Frequency | For every type of task (only one in this paper), multiple instances of the same task are sequentially executed on the same host. The histogram describes the dynamism of the task on that host as measured by the distribution of $T_x$. |\n",
+    "| 11  | Workload | XOVC     | $C_w$     | Histogram: x = Number of concurrent active workloads; y = Frequency | For every experiment run, multiple instances of the same run are concurrently submitted to XOVC. The histogram describes the dynamism of that goup of runs' workload on XOVC as measured by the number of concurrent active (i.e., tasks of that workload are being executed) workloads ($C_w$) active at runtime |\n",
+    "| 12  | Workload | XOVC     | $C_p$     | Histogram: x = Number of concurrent active pilots; y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active (i.e., pilots are alive and ready to execute/executing tasks) pilots active at runtime ($C_p$) |\n",
+    "| 13  | Workload | XOVC     | $C_h$     | Histogram: x = Number of concurrent active hosts; y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active hosts (i.e., hosts where tasks are being executed) at runtime ($C_h$) |\n",
+    "| 14  | Workload | XOVC     | $C_t$     | Histogram: x = Number of concurrent active tasks; y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active (i.e., being executed) tasks at runtime ($C_t$)  |\n",
     "\n",
     "Notes:\n",
     "* We do not have $T_q$ at host level, only the aggregate of all the pilots' $T_q$ into $TTQ$.\n",
@@ -306,6 +323,17 @@
     "* Tasks are scheduled on a pilot; executed on a host.\n",
     "\n",
     "# (Possible) Diagrams of the Measures of Heterogeneity\n",
+    "\n",
+    "Template to define homogeneity/heterogeneity:\n",
+    "\n",
+    "{E,R,M} \n",
+    "\n",
+    "- E = Entity\n",
+    "- R = Resource\n",
+    "- M = Measure\n",
+    "\n",
+    "Measure for a given entity over all the resources\n",
+    "\n",
     "\n",
     "| ID  | Entity   | Resource | Measure   | Description |\n",
     "|-----|----------|----------|-----------|-------------|\n",
@@ -592,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
